# htpy

./: .envrc  .gitignore  .pre-commit-config.yaml  404.html  CNAME  Cargo.toml  LICENSE  README.md  allowlist  conftest.py  htpy.code-workspace  index.html  mkdocs.yml  pyproject.toml  release  stubtest_allowlist  t.py  test
.github/workflows/: docs.yml  main.yml  release.yml
assets/: stream.webm
async/: index.html
changelog/: index.html
common-patterns/: index.html
django/: index.html
docs/: README.md  async.md  changelog.md  common-patterns.md  django.md  faq.md  html2htpy.md  index.md  references.md  starlette.md  static-typing.md  streaming.md  tailwind.md  usage.md
docs/assets/: starlette.webm
docs/how-to/: async.md  convert-html.md  django.md  starlette.md
docs/reference/: html2htpy.md
examples/: aiter_chunks.py  async_example.py  async_in_sync_context.py  async_iterators.py  bad_attribute.py  context.py  for_utility_example.py  htmx_flask.py  index_example.py  starlette_app.py  starlette_hello_world.py  starlette_htmlresponse.py  static_typing_example.py  stream_callable.py  stream_generator.py  stream_lambda.py
examples/djangoproject/: manage.py
examples/djangoproject/exampleproject/: asgi.py  settings.py  urls.py  wsgi.py
examples/djangoproject/form/: apps.py  components.py  forms.py  views.py
examples/djangoproject/index/: apps.py  components.py  views.py
examples/djangoproject/index/templates/: base.html
examples/djangoproject/pizza/: apps.py  components.py  models.py  views.py
examples/djangoproject/pizza/migrations/: 0001_initial.py
examples/djangoproject/stream/: apps.py  components.py  items.py  views.py
examples/djangoproject/widget/: apps.py  views.py  widgets.py
examples/static_typing/: element_example.py  example_node.py
examples/structure/: boostrap_modal.py  bootstrap_modal.py  extends_base.py  extends_class.py
faq/: index.html
how-to/async/: index.html
how-to/convert-html/: index.html
how-to/django/: index.html
how-to/starlette/: index.html
html2htpy/: index.html
htpy/: __init__.py  __init__.pyi  _attributes.py  _attrs.py  _contexts.py  _elements.py  _fragments.py  _legacy_rendering.py  _markup.py  _rendering.py  _safestring.py  _to_html.py  _types.py  _with_children.py  attrs.py  django.py  elements.py  html2htpy.py  safestring.py  starlette.py  utils.py
htpy/cli/: cli.py
htpy/utils/: __init__.py  html_to_htpy.py
reference/html2htpy/: index.html
references/: index.html
scripts/: benchmark_big_table.py  elements.py  fix  gen_source.py  html_spec.json  release  scrape_tags.py  test
search/: search_index.json
src/: lib.rs
src/htpy/: __init__.py  _attributes.py  _compiler.py  _contexts.py  _elements.py  _fragments.py  _legacy_rendering.py  _render_async.py  _render_sync.py  _rendering.py  _types.py  _with_children.py  django.py  html2htpy.py  starlette.py
starlette/: index.html
static-typing/: index.html
streaming/: index.html
tailwind/: index.html
tests/: conftest.py  test_async.py  test_attributes.py  test_basic.py  test_children.py  test_comment.py  test_compiler.py  test_context.py  test_convert_html.py  test_css_str.py  test_django.py  test_dynamic_elements.py  test_element.py  test_elements.py  test_escaping.py  test_fragment.py  test_html2htpy.py  test_iter.py  test_jinja2.py  test_lazy.py  test_legacy_render.py  test_nodes.py  test_render.py  test_render_orphans.py  test_repr.py  test_rust_build.py  test_safestring.py  test_starlette.py  test_types.py  test_utils.py  test_with_children.py
usage/: index.html
