[project]
name = "htpy"
description = "htpy - HTML in Python"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "markupsafe>=2.0.0",
    # typing_extensions is used for @warnings.deprecated introduced in Python 3.13
    "typing_extensions>=4.13.2 ; python_version<'3.13'",
]
readme = "docs/README.md"
authors = [{ name = "Andreas Pelme", email = "andreas@pelme.se" }]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Topic :: Text Processing :: Markup :: HTML",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[dependency-groups]
dev = [
    "pre-commit",
    { include-group = "docs" },
    { include-group = "mypy" },
    { include-group = "pyright" },
    { include-group = "ruff" },
    { include-group = "tests" },
]
docs = ["mkdocs-material==9.5.12"]
mypy = ["mypy"]
pyright = ["pyright"]
ruff = ["ruff"]
tests = [
    "black",
    "django",
    "django-stubs",
    "httpx",
    "jinja2",
    "markdown",
    "pytest",
    "pytest-doctestplus",
    "ruff",
    "starlette",
]

[project.urls]
Homepage = "https://htpy.dev"
Repository = "https://github.com/pelme/htpy"
Documentation = "https://htpy.dev"
Issues = "https://github.com/pelme/htpy/issues"

[project.scripts]
html2htpy = "htpy.html2htpy:main"


[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]


[tool.mypy]
strict = true
packages = ["htpy", "tests"]
exclude = ["examples", "scripts"]


[tool.pyright]
include = ["htpy", "tests"]
strict = ["htpy", "tests"]


[tool.pytest.ini_options]
addopts = "--doctest-glob='docs/*.md'"


[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E",      # pycodestyle error
    "W",      # pycodestyle warning
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "TCH",    # flake8-type-checking
    "RUF100", # yesqa equivalence
    "UP",     # pyupgrade
    "TID",    # flake8-tidy-imports
]
ignore = ["B904"]
